[package]
name = "lpsettings"
version = "0.2.0"
authors = ["snsvrno <snsvrno@tuta.io>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
clap = "2.32"
toml = "0.4"
settingsfile = "0.2"
ansi_term = "0.11"
failure = "0.1"

#output = { git = "https://github.com/Snsvrno/output-lp-rs", tag = "0.2.2" }
#lperror = { git = "https://github.com/Snsvrno/errors-lp-rs", tag = "0.1.0" }
#updater = { git = "https://github.com/Snsvrno/updater-lp-rs", tag = "0.1.1" }